--- a/src/sdg/components/PivFooter/_pivFooter.html
+++ b/src/sdg/components/PivFooter/_pivFooter.html
@@ -35,13 +35,18 @@
     </nav>
     <qc-external-link slot="copyright">
       <a
+              id="copyright-link"
               target="_blank"
               rel="noopener"
               href="https://www.quebec.ca/droit-auteur">
-        © Gouvernement du Québec, 2023
       </a>
     </qc-external-link>
   </qc-piv-footer>
+
+  <script>
+    const copyrightSlot = document.getElementById('copyright-link');
+    copyrightSlot.innerHTML = `© Gouvernement du Québec, ${new Date().getFullYear()}`;
+  </script>
 </qc-doc-exemple>
 <!--            <qc-code target-id="piv-footer-ex-2"></qc-code>-->
 
