Barre de recherche - ajout des attributs invalid et invalid-text

--- a/src/sdg/components/SearchBar/_searchBar.html
+++ b/src/sdg/components/SearchBar/_searchBar.html
@@ -6,6 +6,14 @@
   </form>
 </qc-doc-exemple>
 
+<qc-doc-exemple caption="Exemple de barre de recherche avec message d'erreur">
+  <form action="http://www.quebec.ca/resultats-de-recherche">
+    <qc-search-bar name="tx_solr[q]"
+                   invalid
+                   invalid-text="Nous sommes désolé, une erreur s'est produite"></qc-search-bar>
+  </form>
+</qc-doc-exemple>
+
 <qc-doc-exemple caption="Exemple de barre de recherche sur fond blanc et bleu PIV">
 
   <qc-search-bar></qc-search-bar>
