Icône - ajout automatique de aria-hidden en cas d'absence de aria-label (attribut label).

--- a/src/sdg/bases/Icon/IconDoc.ejs
+++ b/src/sdg/bases/Icon/IconDoc.ejs
@@ -63,7 +63,7 @@
             <td>label</td>
             <td>Texte</td>
             <td>""</td>
-            <td>Texte alternatif pour l’accessibilité. Sert de libellé pour les lecteurs d’écran.</td>
+            <td>Texte alternatif pour l’accessibilité. Sert de libellé pour les lecteurs d’écran. Si absent, l'icône sera masquée au lecteur d'écran (via l'attribut <code>aria-hidden</code></td>
         </tr>
         <tr>
             <td>rotate</td>
