Ajustement de la hauteur de dropdownListButton pour compenser pour la bordure

--- a/src/sdg/components/DropdownList/DropdownListButton/_dropdownListButton.scss
+++ b/src/sdg/components/DropdownList/DropdownListButton/_dropdownListButton.scss
@@ -6,7 +6,7 @@ $min-height: 40;
   display: flex;
   width: 100%;
   justify-content: space-between;
-  height: rem($min-height);
+  height: rem($min-height - 2);
   align-items: center;
   background-color: token-value(color, background);
   border: none;
