--- a/src/sdg/components/TextField/_textField.scss
+++ b/src/sdg/components/TextField/_textField.scss
@@ -33,6 +33,7 @@ textarea {
     overflow: hidden;
     margin-top: rem(4);
     border: 1px solid token-value(color formfield border);
+    z-index: 11;
 
     &::placeholder {
       color: token-value(color grey medium);
@@ -43,7 +44,7 @@ textarea {
     &:focus-visible {
       outline: 2px solid token-value(color formfield focus outline);
       border: 2px solid token-value(color formfield focus border);
-      padding: rem(7);
+      padding: rem(6);
     }
 
     &:disabled {
