--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1903,6 +1903,10 @@ label.qc-selection-button:hover::before {
 }
 label.qc-selection-button:has(input:checked)::before {
   background-color: var(--qc-color-blue-pale);
+  border-color: var(--qc-color-blue-light);
+}
+label.qc-selection-button:focus, label.qc-selection-button:has(input:focus)::before {
+  border-color: inherit;
 }
 label.qc-selection-button:has(input:disabled)::before {
   background-color: var(--qc-color-grey-pale);
