Ajout de qc-button-group pour gérer les gaps horizontaux

--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -114,7 +114,7 @@
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemples de boutons avec icône.<br/>NB: voir la section <a href='#icons'>Icônes</a> pour plus de détails concernant le composant <code>qc-icon</code>.">
-    <div>
+    <div class="qc-button-group">
         <button class="qc-button qc-primary">
             <qc-icon type="arrow-up" rotate="-90"></qc-icon>
             Précédent
@@ -128,6 +128,7 @@
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemples avec un lien et un bouton de soumission.">
+    <div class="qc-button-group">
         <a href="javascript:void(0);"
            class="qc-button qc-primary"
            role="button"
@@ -135,6 +136,7 @@
             Action
         </a>
         <input type="submit" value="Action" class="qc-button qc-primary" />
+    </div>
 </qc-doc-exemple>
 
 
