--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2586,7 +2586,6 @@ li[aria-selected=true] {
   vertical-align: middle;
   border: 0.2rem solid transparent;
   cursor: pointer;
-  margin-right: 3.2rem;
   margin-bottom: var(--qc-spacer-md);
 }
 .qc-button:focus, .qc-button:focus-visible {
@@ -2598,7 +2597,6 @@ li[aria-selected=true] {
   min-height: 4rem;
   padding: 0.7rem 1.5rem;
   border-width: 0.1rem;
-  margin-right: var(--qc-spacer-md);
   margin-bottom: var(--qc-spacer-sm);
 }
 .qc-button.qc-button-rounded {
@@ -2723,14 +2721,9 @@ a.qc-button {
 
 .qc-button-group {
   display: flex;
-  row-gap: 3.2rem;
-  column-gap: var(--qc-spacer-md);
-  margin-bottom: var(--qc-spacer-md);
-}
-.qc-button-group button {
-  margin: 0;
+  flex-wrap: wrap;
+  column-gap: 3.2rem;
 }
 .qc-button-group.qc-compact {
-  row-gap: var(--qc-spacer-md);
-  column-gap: var(--qc-spacer-sm);
+  column-gap: var(--qc-spacer-md);
 }
