Ajustement des fichiers de test de boutons

--- a/src/sdg/components/Button/Test/buttonBaselineTest.html
+++ b/src/sdg/components/Button/Test/buttonBaselineTest.html
@@ -306,7 +306,7 @@
 <br>
 <br>
 
-<div>
+<div class="qc-button-group">
     <button class="qc-button qc-primary">
         <qc-icon type="plus"></qc-icon>
         Ajouter
@@ -324,7 +324,7 @@
     Questions
 </button>
 
-<div>
+<div class="qc-button-group">
     <button class="qc-button qc-simple">
         <qc-icon type="information"></qc-icon>
         Action
@@ -336,7 +336,7 @@
     </button>
 </div>
 
-<div>
+<div class="qc-button-group qc-compact">
     <button class="qc-button qc-simple qc-compact">
         <qc-icon type="information"></qc-icon>
         Action
