--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-    <div>
+    <div class="qc-button-group">
         <button class="qc-button qc-simple">
             <qc-icon type="information"></qc-icon>
             Action
@@ -99,7 +99,7 @@
             Action
         </button>
     </div>
-    <div>
+    <div class="qc-button-group qc-compact">
         <button class="qc-button qc-simple qc-compact">
             <qc-icon type="information"></qc-icon>
             Action
