Ajustement de tests de choiceGroup pour inclure un input hidden dans chaque label

--- a/src/sdg/components/ChoiceGroup/Test/checkboxBaselineTest.html
+++ b/src/sdg/components/ChoiceGroup/Test/checkboxBaselineTest.html
@@ -5,6 +5,7 @@
                  name="tile-1"
 >
     <label>
+        <input type="hidden">
         <input type="checkbox"
 
                value="1"
@@ -17,6 +18,7 @@
     </label>
 
     <label>
+        <input type="hidden">
         <input type="checkbox"
 
                value="2"
@@ -26,6 +28,7 @@
             </span>
     </label>
     <label>
+        <input type="hidden">
         <input type="checkbox"
 
                value="3"
