Application de correction de focus présente dans gitlab/fix-focus-logo-bandeau-piv

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1440,12 +1440,26 @@ qc-piv-header {
   align-items: start;
   min-width: 7.2rem;
 }
-.qc-piv-header .piv-top .logo {
+.qc-piv-header .piv-top .signature-group {
   display: flex;
-  flex-basis: 25.6rem;
-  margin-right: 0;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  align-items: start;
+  margin-right: auto;
 }
-.qc-piv-header .piv-top .logo [role=img] {
+.qc-piv-header .piv-top .signature-group > * {
+  min-height: 7.2rem;
+}
+.qc-piv-header .piv-top .signature-group .logo {
+  display: flex;
+  align-items: center;
+  flex-basis: 25.6rem;
+}
+.qc-piv-header .piv-top .signature-group .logo a {
+  display: block;
+  height: 6.4rem;
+}
+.qc-piv-header .piv-top .signature-group .logo a [role=img] {
   background-image: var(--logo-src);
   background-repeat: no-repeat;
   background-size: 100%;
@@ -1453,10 +1467,12 @@ qc-piv-header {
   margin-right: 16px;
   min-width: 150px;
   width: 100%;
+  height: 100%;
   max-width: 20rem;
-  min-height: 7.2rem;
+  min-height: 4rem;
 }
 .qc-piv-header .piv-top .title {
+  display: flex;
   align-items: center;
   align-self: center;
 }
