--- a/src/sdg/components/PivHeader/_pivHeader.scss
+++ b/src/sdg/components/PivHeader/_pivHeader.scss
@@ -46,23 +46,45 @@ qc-piv-header {
     display: flex;
     align-items: start;
     min-width: rem(72);
-    .logo {
+
+    .signature-group {
       display: flex;
-      flex-basis: rem(256);
-      margin-right: 0;
-      [role=img] {
-        background-image: var(--logo-src);
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: center;
-        margin-right: 16px;
-        min-width: 150px;
-        width: 100%;
-        max-width: rem(200);
+      flex-grow: 1;
+      flex-wrap: wrap;
+      align-items: start;
+      margin-right: auto;
+      & > * {
         min-height: rem(72);
       }
+
+      .logo {
+        display: flex;
+        align-items: center;
+        flex-basis: rem(256);
+
+        a {
+          display: block;
+          height: calc(rem(72) - rem(8));
+          [role=img] {
+            background-image: var(--logo-src);
+            background-repeat: no-repeat;
+            background-size: 100%;
+            background-position: center;
+            margin-right: 16px;
+            min-width: 150px;
+            //object-fit: fill;
+            width: 100%;
+            height: 100%;
+            max-width: rem(200);
+            min-height: rem(40);
+
+          }
+        }
+      }
     }
+
     .title {
+      display: flex;
       align-items: center;
       align-self: center;
     }
