--- a/src/sdg/components/TextField/_textField.scss
+++ b/src/sdg/components/TextField/_textField.scss
@@ -66,14 +66,14 @@ input ,
 input + .qc-textfield-charcount {
   .qc-textfield &,
   qc-textfield & {
-    max-width: token-value(size input max-width);
+    width: token-value(size input max-width);
   }
 }
 textarea,
 textarea + .qc-textfield-charcount {
   .qc-textfield &,
   qc-textfield & {
-    max-width: token-value(size textarea max-width);
+    width: token-value(size textarea max-width);
   }
 }
 
@@ -85,6 +85,7 @@ textarea,
     @each $size, $width in $sizes {
       [size="#{$size}"] & {
         max-width: $width;
+        width: $width;
       }
     }
   }
