--- a/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
@@ -20,6 +20,12 @@
   </select>
 </qc-select>
 
+<script>
+    document.getElementById("select-single-choice").addEventListener("change", (event) => {
+        console.log("Option sélectionnée :", event.target.value);
+    });
+</script>
+
 <div style="height: 40rem;">
   <qc-select id="qc-select-single-choice-search" enable-search>
     <label for="select-single-choice-search">Choix unique avec recherche</label>
